--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,3 +1,4 @@
+<button class="btn btn-outline-info" (click)="addComment()">Comment</button>
 <!-- <button class="btn btn-outline-danger" (click)="deletePost()" *ngIf="post.author.id == user.id">Delete</button> -->
 <!-- LOAD POST CONTENT -->
 <div class="container">
@@ -34,11 +35,11 @@
 <div class="overflow-auto" style="height: {{size}}">
     <div class="container">
         <div class="row" *ngFor="let com of comments">
-            <div class="col-3">
+            <div class="col-4">
                 <p>{{ com.created | date : 'short' }}-{{ com.author.firstname }} {{ com.author.lastname }}:</p>
             </div>
 
-            <div class="col-7">
+            <div class="col-6">
                 <p *ngIf="editComment == false || id != com.cId">{{ com.body }}</p>
                 <textarea class="form-control" [(ngModel)]="newBody" *ngIf="editComment && id == com.cId"></textarea>
             </div>
@@ -57,3 +58,10 @@
         </div>
     </div>
 </div>
+
+<!-- NEW COMMENT SECTION -->
+<div class="form-floating" *ngIf="showComment">
+    <textarea class="form-control" id="floatingBody" placeholder="Add a comment" [(ngModel)]="commentBody" required></textarea>
+    <label for="floatingBody">Add a Comment</label>
+</div>
+<button class="btn btn-outline-success" (click)="submitComment()" *ngIf="showComment" [disabled]="commentBody == null || commentBody == '' ">Submit</button>
