Revert "Merge branch 'EmployeeForum-Justin'"
This reverts commit 1dc6debb8a4ff2633434eeadb78c51e63fde2c4f, reversing
changes made to 71ec5e2fe850f29ad3be41e743dd37246974f583.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<div [ngClass]="isDarkTheme? 'dark-theme' : 'light-theme'">
+    <mat-card>
+        <mat-card-content>
+            <mat-slide-toggle (click)="toggleTheme()">Dark Mode</mat-slide-toggle>
+        </mat-card-content>
+
+    <router-outlet></router-outlet>
+</mat-card>
+</div>
