--- a/src/styles.css
+++ b/src/styles.css
@@ -355,6 +355,7 @@ td { text-align: left;}
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
  }
  .mainbox{
+   color: black;
    margin-left: auto;
    margin-right: auto;
    min-height: 590px;
