Patients saving, employee forum in, and room service half working

--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -11,6 +11,12 @@ Home
 </a>
 </li>
 <li class="nav-item">
+  <a routerLink="/forum" class="nav-link link-dark" aria-current="page">
+    <i class="bi bi-chat-right-text"></i>
+    Employee Forum
+  </a>
+</li>
+<li class="nav-item">
 <a [routerLink]="['/profile']" class="nav-link link-dark">
 <i class="bi bi-person"></i>
 Profile
