--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,86 +19,141 @@ $WellNet-warn: mat.define-palette(mat.$green-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$WellNet-theme: mat.define-light-theme((
-  color: (
-    primary: $WellNet-primary,
-    accent: $WellNet-accent,
-    warn: $WellNet-warn,
+$WellNet-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $WellNet-primary,
+      accent: $WellNet-accent,
+      warn: $WellNet-warn,
+    ),
   )
-
-));
-$WellNet-dark-theme: mat.define-dark-theme((
-  color: (
-    primary: $WellNet-primary,
-    accent: $WellNet-accent,
-    warn: $WellNet-warn,
+);
+$WellNet-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $WellNet-primary,
+      accent: $WellNet-accent,
+      warn: $WellNet-warn,
+    ),
   )
-));
+);
 
-.dark-theme{
-  span.mat-slide-toggle-thumb{
+.dark-theme {
+  .bg-light {
+    background-color: #1c1c1c !important;
+  }
+
+  a {
+    color: white !important;
+  }
+
+  span.mat-slide-toggle-thumb {
     background-color: #239507;
   }
 
-  .mainbox{
-    background: black;
-    color:white;
+  textarea,
+  input,
+  select {
+    background-color: #5c5c5c;
+    color: black;
+  }
+
+  .mat-card {
+    height: 100%;
+  }
+
+  .card {
+    background-color: #5c5c5c;
+    color: white;
+  }
+
+  .mainbox {
+    background: #1c1c1c;
+    color: white;
     background-position: right;
     background-repeat: no-repeat;
-   }
-   .mainbox-bg{
-    background: #1C1C1C url('/assets/img/WellNetDocBg.png');
+  }
+  .mainbox-bg {
+    background: #1c1c1c url("/assets/img/WellNetDocBg.png");
     background-position: right;
     background-repeat: no-repeat;
   }
 
-.table-striped{
-  color: white;
-}
-.bi-bandaid{
-  color: white;
-}
-.accountCard {
+  ::placeholder {
+    color: black !important;
+  }
 
-  border-radius: 25px;
-  text-align: center;
-  margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-  color: white;
-  box-shadow: 1.5px 4px 3px 4px #888888;
-  background-color: rgba(86, 102, 117, 0);
+  .table-striped {
+    color: white;
+  }
+  .bi-bandaid {
+    color: white;
+  }
+  .accountCard {
+    border-radius: 25px;
+    text-align: center;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    color: white;
+    box-shadow: 1.5px 4px 3px 4px #888888;
+    background-color: rgba(86, 102, 117, 0);
+  }
+  //color suggestions instead of black #1C1C1C or a #161616
+  .list-group-item {
+    background: #1d1e1c;
+    color: white;
+  }
 
+  .h100 {
+    background: black;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+      0 0 8px rgba(57, 126, 61, 0.6) !important;
+  }
+  .table {
+    --bs-table-striped-color: white;
+  }
 
-}
-//color suggestions instead of black #1C1C1C or a #161616
-.list-group-item{
-  background: #1d1e1c;
-  color: white;
-}
+  .tab {
+    background-color: #1c1c1c !important;
+    color: #ecebf0;
+  }
 
-.h100{
-  background: black;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(57, 126, 61, 0.6) !important;
-}
-.table{
-  --bs-table-striped-color: white;
-}
+  .tab:hover {
+    background-color: #00bbf3 !important;
+    color: white;
+  }
 
-img{
-  border: double #239507;
-  background-color: black;
-}
+  .floor,
+  .hospital-room {
+    background-color: #1c1c1c !important;
+  }
+
+  .room-number {
+    background-color: white !important;
+    color: black !important;
+  }
+
+  .restroom,
+  .waiting-room,
+  .center-room {
+    background-color: #888888 !important;
+  }
+
+  img {
+    border: double #239507;
+    background-color: black;
+  }
   @include mat.all-component-themes($WellNet-dark-theme);
   opacity: 1;
 
-  .d-flex.align-items-center{
+  .d-flex.align-items-center {
     background: #161616;
   }
 }
 
-span.mat-slide-toggle-thumb{
+span.mat-slide-toggle-thumb {
   background-color: #239507;
 }
 
@@ -107,5 +161,3 @@ span.mat-slide-toggle-thumb{
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($WellNet-theme);
-
-
