--- a/src/app/components/main-floor/main-floor.component.html
+++ b/src/app/components/main-floor/main-floor.component.html
@@ -676,7 +676,7 @@ cdkDropList
       </div>
     </div>
   </div>
-  <a *ngIf="wasPlaced"href="diagnosis">HELLO</a>
+  <div class="diagnosisLink">
+  <a *ngIf="wasPlaced"href="diagnosis">Diagnose</a>
+  </div>
 </div>
-
-    
