--- a/src/app/components/main-floor/main-floor.component.css
+++ b/src/app/components/main-floor/main-floor.component.css
@@ -231,3 +231,17 @@
     z-index: 0;
   }
   
+  .diagnosisLink{
+    position: absolute;
+    top: 80%;
+    left: 95%;
+    transform: translate(-50%, -50%);
+    width: 8%;
+    height: 10vh;
+    border: 3px solid #e3e3e3;
+    background-color: #ecebf0;
+    font-size: 1.2rem;
+    padding-left: 5px;
+    padding-top: 10px;
+    z-index: 1;
+  }
