My last hotfixes

--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -30,7 +30,7 @@
                 <td>Role:</td>
                 <td id = "role"></td>
             </tr>
-            <tr>
+            <tr *ngIf="isDoctor">
                 <td>Specialization:</td>
                 <td id = "specialization"></td>
             </tr>
